# CuckyEd

./: .gitignore  CMakeLists.txt
src/: Error.cpp  Error.h  Main.cpp  Project.cpp  Project.h
